--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: #232323;
+    margin: 0;
+    font-family: "Montserrat", "Avenir";
 }
 
 .square {
@@ -8,15 +10,26 @@ body {
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 15%;
+    transition: background .6s;
+    --webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
 #container {
-    margin: 0 auto;
+    margin: 30px auto;
     max-width: 600px;
 }
 
 h1 {
     color: white;
+    text-align: center;
+    background-color: rgb(85, 99, 129);
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    line-height: 1.1;
+    padding: 20px 0;
 }
 
 #stripe {
@@ -24,4 +37,38 @@ h1 {
     height: 30px;
     text-align: center;
     color: black;
+}
+
+.selected {
+    background: rgb(85, 99, 129);
+    color: white;
+}
+
+#colorDisplay {
+    font-size: 200%;
+}
+
+button {
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color: rgb(85, 99, 129);
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all .3s; 
+    --webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+
+}
+
+button:hover {
+    color: white;
+    background: rgb(85, 99, 129);
+}
+
+#message {
+    display: inline-block;
+    width: 20%;
 }
