--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ button {
     transition: all .3s; 
     --webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
-
+    outline: none;
 }
 
 button:hover {
